force-app/main/default/objects/Account_File_Sync_Request__e/Account_File_Sync_Request__e.object-meta.xml
<CustomObject>
    <label>Account_File_Sync_Request</label>
    <pluralLabel>Account_File_Sync_Request</pluralLabel>
</CustomObject>