force-app/main/default/objects/Account_File_Sync_Request__e/fields/Drive_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_Folder_Id__c</fullName>
    <label>Drive Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>