force-app/main/default/objects/Account_File_Sync_Request__e/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>