force-app/main/default/objects/Account_File_Sync_Request__e/fields/Public_Url__c.field-meta.xml
<CustomField>
    <fullName>Public_Url__c</fullName>
    <label>Public Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>